--- a/Aplicacion Desktop/PalcoNet/App.config
+++ b/Aplicacion Desktop/PalcoNet/App.config
@@ -14,10 +14,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="GD2C2018Entities" connectionString="metadata=res://*/ModeloDatos.csdl|res://*/ModeloDatos.ssdl|res://*/ModeloDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLSERVER2012;initial catalog=GD2C2018;persist security info=True;user id=gdEspectaculos2018;password=gd2018;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="PalcoNet.Properties.Settings.GD2C2018ConnectionString"
-      connectionString="Data Source=localhost\SQLSERVER2012;Initial Catalog=GD2C2018;Persist Security Info=True;User ID=gdEspectaculos2018;Password=gd2018"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="GD2C2018Entities" connectionString="metadata=res://*/ModeloDatos.csdl|res://*/ModeloDatos.ssdl|res://*/ModeloDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLSERVER2012;initial catalog=GD2C2018;persist security info=True;user id=gdEspectaculos2018;password=gd2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
