--- a/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
+++ b/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
@@ -82,6 +82,8 @@
     <Compile Include="Extensiones\TextBoxRequerido.Designer.cs">
       <DependentUpon>TextBoxRequerido.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensiones\Utilidades.cs" />
+    <Compile Include="Extensiones\Validaciones.cs" />
     <Compile Include="Factura.cs">
       <DependentUpon>ModeloDatos.tt</DependentUpon>
     </Compile>
@@ -106,11 +108,35 @@
     <Compile Include="Forms\Clientes\ModifClientesForm.Designer.cs">
       <DependentUpon>ModifClientesForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Empresas\EmpresasForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Empresas\EmpresasForm.Designer.cs">
+      <DependentUpon>EmpresasForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Grados\GradosForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Grados\GradosForm.Designer.cs">
+      <DependentUpon>GradosForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Main\LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Main\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Main\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Main\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Main\MenuForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Main\MenuForm.Designer.cs">
+      <DependentUpon>MenuForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Main\RegistrarClienteForm.cs">
       <SubType>Form</SubType>
@@ -141,6 +167,12 @@
     </Compile>
     <Compile Include="Forms\Roles\RolesForm.Designer.cs">
       <DependentUpon>RolesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Rubros\RubrosForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Rubros\RubrosForm.Designer.cs">
+      <DependentUpon>RubrosForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Funcionalidad.cs">
       <DependentUpon>ModeloDatos.tt</DependentUpon>
@@ -207,8 +239,17 @@
     <EmbeddedResource Include="Forms\Clientes\ModifClientesForm.resx">
       <DependentUpon>ModifClientesForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Main\LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Main\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Main\MenuForm.resx">
+      <DependentUpon>MenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Main\RegistrarClienteForm.resx">
+      <DependentUpon>RegistrarClienteForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Main\RegistrarEmpresaForm.resx">
       <DependentUpon>RegistrarEmpresaForm.cs</DependentUpon>
@@ -253,7 +294,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
