--- a/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
+++ b/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
@@ -114,11 +114,23 @@
     <Compile Include="Forms\Empresas\EmpresasForm.Designer.cs">
       <DependentUpon>EmpresasForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Grados\AltaGrado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Grados\AltaGrado.Designer.cs">
+      <DependentUpon>AltaGrado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Grados\GradosForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Grados\GradosForm.Designer.cs">
       <DependentUpon>GradosForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Grados\ModificacionGradoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Grados\ModificacionGradoForm.Designer.cs">
+      <DependentUpon>ModificacionGradoForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Main\LoginForm.cs">
       <SubType>Form</SubType>
@@ -239,6 +251,15 @@
     <EmbeddedResource Include="Forms\Clientes\ModifClientesForm.resx">
       <DependentUpon>ModifClientesForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Grados\AltaGrado.resx">
+      <DependentUpon>AltaGrado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Grados\GradosForm.resx">
+      <DependentUpon>GradosForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Grados\ModificacionGradoForm.resx">
+      <DependentUpon>ModificacionGradoForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Main\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -281,8 +302,46 @@
     </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Cliente.datasource" />
+    <None Include="Properties\DataSources\Compra.datasource" />
+    <None Include="Properties\DataSources\Espectaculo.datasource" />
+    <None Include="Properties\DataSources\Espec_Empresa.datasource" />
+    <None Include="Properties\DataSources\Estado.datasource" />
+    <None Include="Properties\DataSources\Factura.datasource" />
+    <None Include="Properties\DataSources\Forma_Pago.datasource" />
     <None Include="Properties\DataSources\Funcionalidad.datasource" />
+    <None Include="Properties\DataSources\GD2C2018Entities.datasource" />
+    <None Include="Properties\DataSources\Grado_Publicacion.datasource" />
+    <None Include="Properties\DataSources\Item_Factura.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Extensiones.ListaFuncionalidades.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Extensiones.MetodosExtension.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Extensiones.TextBoxRequerido.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Extensiones.Utilidades.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Extensiones.Validaciones.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.AltaClientesForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.ClientesForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.EmpresasForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.GradosForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.LoginForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.MainForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.MenuForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.ModifClientesForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.NuevoRolForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.RegistrarClienteForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.RegistrarEmpresaForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.RegistrarseForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.RolesForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Forms.RubrosForm.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Properties.Resources.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Properties.Settings.datasource" />
+    <None Include="Properties\DataSources\Premio.datasource" />
+    <None Include="Properties\DataSources\Program.datasource" />
+    <None Include="Properties\DataSources\Publicacion.datasource" />
+    <None Include="Properties\DataSources\Puntos.datasource" />
     <None Include="Properties\DataSources\Rol.datasource" />
+    <None Include="Properties\DataSources\Rubro.datasource" />
+    <None Include="Properties\DataSources\Tipo_Ubicacion.datasource" />
+    <None Include="Properties\DataSources\Ubicacion.datasource" />
+    <None Include="Properties\DataSources\Usuario.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
