--- a/Aplicacion Desktop/PalcoNet/App.config
+++ b/Aplicacion Desktop/PalcoNet/App.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="PalcoNet.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Culture=neutral" />
   </configSections>
+  
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
@@ -14,5 +18,17 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  <add name="GD2C2018Entities" connectionString="metadata=res://*/ModeloDatos.csdl|res://*/ModeloDatos.ssdl|res://*/ModeloDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLSERVER2012;initial catalog=GD2C2018;persist security info=True;user id=gdEspectaculos2018;password=gd2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="GD2C2018Entities" connectionString="metadata=res://*/ModeloDatos.csdl|res://*/ModeloDatos.ssdl|res://*/ModeloDatos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLSERVER2012;initial catalog=GD2C2018;persist security info=True;user id=gdEspectaculos2018;password=gd2018;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="PalcoNet.Properties.Settings.GD2C2018ConnectionString"
+      connectionString="Data Source=localhost\SQLSERVER2012;Initial Catalog=GD2C2018;Persist Security Info=True;User ID=gdEspectaculos2018;Password=gd2018"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <applicationSettings>
+    <PalcoNet.Properties.Settings>
+      <setting name="FechaActual" serializeAs="String">
+        <value>11/24/2018 02:30:00</value>
+      </setting>
+    </PalcoNet.Properties.Settings>
+  </applicationSettings>
 </configuration>
