--- a/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
+++ b/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
@@ -91,9 +91,6 @@
     <Compile Include="Factura.cs">
       <DependentUpon>ModeloDatos.tt</DependentUpon>
     </Compile>
-    <Compile Include="Forma_Pago.cs">
-      <DependentUpon>ModeloDatos.tt</DependentUpon>
-    </Compile>
     <Compile Include="Forms\Clientes\AltaClientesForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +108,12 @@
     </Compile>
     <Compile Include="Forms\Clientes\ModifClientesForm.Designer.cs">
       <DependentUpon>ModifClientesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Compras\ComisionesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Compras\ComisionesForm.Designer.cs">
+      <DependentUpon>ComisionesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Compras\ComprarForm.cs">
       <SubType>Form</SubType>
@@ -238,6 +241,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ModeloDatos.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Model\CompraModel.cs" />
     <Compile Include="Model\PublicacionModel.cs" />
     <Compile Include="Model\UbicacionModel.cs" />
     <Compile Include="Premio.cs">
@@ -255,9 +259,6 @@
       <DependentUpon>ModeloDatos.tt</DependentUpon>
     </Compile>
     <Compile Include="Rubro.cs">
-      <DependentUpon>ModeloDatos.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Tipo_Ubicacion.cs">
       <DependentUpon>ModeloDatos.tt</DependentUpon>
     </Compile>
     <Compile Include="Ubicacion.cs">
@@ -280,6 +281,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Clientes\ModifClientesForm.resx">
       <DependentUpon>ModifClientesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Compras\ComisionesForm.resx">
+      <DependentUpon>ComisionesForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Compras\ComprarForm.resx">
       <DependentUpon>ComprarForm.cs</DependentUpon>
@@ -346,7 +350,9 @@
     </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Cliente.datasource" />
+    <None Include="Properties\DataSources\Compra1.datasource" />
     <None Include="Properties\DataSources\Funcionalidad.datasource" />
+    <None Include="Properties\DataSources\PalcoNet.Model.CompraModel.datasource" />
     <None Include="Properties\DataSources\PalcoNet.Model.UbicacionModel.datasource" />
     <None Include="Properties\DataSources\Rol.datasource" />
     <None Include="Properties\DataSources\Ubicacion1.datasource" />
